Add startup banner and update changelog for v2.4.1

--- a/docs/CHANGELOGS/V2.4.1_FEATURES.md
+++ b/docs/CHANGELOGS/V2.4.1_FEATURES.md
@@ -6,6 +6,21 @@
 
 ## New in This Release
 
+
+### Startup Banner (QOL)
+
+RhinoWAF now prints a friendly startup banner with version info.
+
+**Example Output:**
+```
+==============================
+ RhinoWAF v2.4.1 starting up 
+ Protecting your apps, one request at a time.
+==============================
+```
+
+---
+
 ### Request ID Tracking (NEW)
 
 Added unique request ID tracking for better observability and debugging support.
