Implement localhost-only restriction for sensitive endpoints and update documentation

--- a/docs/CHANGELOGS/V2.4.1_FEATURES.md
+++ b/docs/CHANGELOGS/V2.4.1_FEATURES.md
@@ -117,6 +117,13 @@ Unauthenticated requests to protected paths redirect to OAuth2 provider.
 - `/oauth2/callback` - OAuth2 callback handler (auto-created)
 - `/oauth2/logout` - Logout and session clear
 
+### Sensitive Endpoint IP Restriction (SECURITY)
+
+Sensitive endpoints (`/metrics`, `/health`, `/reload`, `/flood`, `/fingerprint/collect`, `/fingerprint/stats`, `/csrf/token`) are now restricted to localhost by default. Requests from non-localhost IPs will receive HTTP 403 Forbidden. This reduces attack surface and prevents remote abuse of internal functionality.
+
+
+**Benefits**:
+
 ## Previously Completed (v2.4.1)
 
 ### Advanced Features (14 completed)
