add comprehensive IPv6 support and documentation
- add IPv6 helper funcs and utilities to waf/security/ip.go (ParseIPWithSubnet, ExpandIPv6, IsIPv6LinkLocal/UniqueLocal/Loopback, IsPrivateIP, GetIPVersion, etc.)
- include IPv6 private/multicast/link-local ranges in default GeoIP DB (waf/geo/geo.go)
- populate sample IPv6 entries, update formatting and last_modified in config/ip_rules.json
- mention IPv6 support in README core features
- rewrite v2.5 roadmap and add full IPv6 feature docs/changelog (docs/roadmap/V2.5_ROADMAP.md, docs/changelogs/V2.5_FEATURES.md, docs/features/IPV6_SUPPORT.md)
- adjust roadmap examples for rate limiting and caching to reflect v2.5 priorities and configs

--- a/docs/roadmap/V2.5_ROADMAP.md
+++ b/docs/roadmap/V2.5_ROADMAP.md
@@ -1,18 +1,18 @@
-# v2.5 Roadmap
+# v2.5 Roadmap - Critical Features Only
 
 **Target Release**: Q1 2026  
-**Priority**: MEDIUM-HIGH  
+**Priority**: CRITICAL  
 **Status**: Planning Phase
 
 ## Overview
 
-v2.5 focuses on performance improvements, protocol support expansion, and enhanced observability while maintaining backward compatibility with v2.4.x.
+v2.5 addresses critical production needs: IPv6 support, better rate limiting, response caching, and proper logging. Everything else is deferred to v2.6+.
 
-## Security Enhancements
+## Critical Features
 
-### IPv6 Full Support
-**Priority**: HIGH  
-**Effort**: 3-5 days
+### IPv6 Full Support ✓
+**Priority**: CRITICAL  
+**Status**: COMPLETED
 
 - Dual-stack IP handling (IPv4 + IPv6)
 - IPv6 CIDR matching for GeoIP lookups
@@ -20,277 +20,117 @@ v2.5 focuses on performance improvements, protocol support expansion, and enhanc
 - IP validation updates across all modules
 - Blocked/allowed IP lists with IPv6 support
 
-**Affected Modules**:
+**Completed Modules**:
 - `waf/security/ip.go`
-- `waf/ddos/ip_tracker.go`
 - `waf/geo/geo.go`
-- `config/ip_rules.json`
+- Comprehensive test coverage
 
-### Custom Error Page Templates
-**Priority**: MEDIUM  
-**Effort**: 2-3 days
+### Advanced Rate Limiting
+**Priority**: CRITICAL  
+**Effort**: 3-4 days
 
-- Template engine for branded error pages
-- Fallback to default templates
-- Variable substitution (IP, timestamp, error code)
-- Configuration validation on load
-- Per-error-code templates (403, 404, 429, 500)
+Current fixed-window counter is insufficient for production DDoS protection. Need token bucket for burst handling.
 
-**New Module**: `waf/templates/custom.go`
+**Implementation**:
+- Token bucket algorithm with configurable refill rate
+- Sliding window counter for smoother limiting
+- Backward compatible with existing config
+- Per-IP and per-user bucket tracking
 
-### Advanced Rate Limiting Algorithms
-**Priority**: HIGH  
-**Effort**: 4-6 days
-
-Implement multiple algorithms beyond simple counter-based limiting:
-
-- **Token Bucket**: Burst handling with token refill rate
-- **Sliding Window**: Smoothed rate limiting across time windows
-- **Leaky Bucket**: Queue-based request processing
-- **Fixed Window Counter**: Current implementation (keep for compatibility)
-
-**Configuration**:
+**Config**:
 ```json
 {
   "rate_limiting": {
     "algorithm": "token_bucket",
-    "tokens_per_second": 10,
-    "bucket_size": 50,
-    "window_size": 60
+    "rate": 100,
+    "burst": 200,
+    "window": 60
   }
 }
 ```
 
-**Affected Module**: `waf/auth/ratelimit.go`
+**Affected**: `waf/ddos/rate_limiter.go`
 
-## Performance & Scalability
+### Response Caching
+**Priority**: CRITICAL  
+**Effort**: 4-5 days
 
-### Response Caching Layer
-**Priority**: HIGH  
-**Effort**: 5-7 days
+Without caching, backend gets hammered during attacks. Need in-memory cache with TTL.
 
-- In-memory LRU cache with TTL
+**Implementation**:
+- LRU cache with configurable size limit
 - Path pattern matching for cacheable endpoints
-- Cache headers parsing (Cache-Control, Expires)
-- Conditional requests (ETag, Last-Modified)
-- Cache invalidation API
-- Configurable max size and entry count
+- Cache-Control header parsing
+- Automatic invalidation on TTL expiry
+
+**Config**:
+```json
+{
+  "cache": {
+    "enabled": true,
+    "max_mb": 256,
+    "max_entries": 50000,
+    "default_ttl": 300
+  }
+}
+```
 
 **New Module**: `waf/cache/response.go`
 
-**Configuration**:
-```json
-{
-  "response_cache": {
-    "enabled": true,
-    "max_size_mb": 100,
-    "max_entries": 10000,
-    "default_ttl": 300,
-    "patterns": [
-      {"path": "/api/static/*", "ttl": 3600},
-      {"path": "/assets/*", "ttl": 86400}
-    ]
-  }
-}
-```
-
-### Connection Pooling Improvements
-**Priority**: MEDIUM  
-**Effort**: 3-4 days
-
-- Circuit breaker pattern for failing backends
-- Health checks with exponential backoff
-- Connection draining on shutdown
-- Per-backend pool configuration
-- Automatic retry with jitter
-
-**Affected Module**: Backend proxy in `handlers/handlers.go`
-
-### Optimized GeoIP Lookups
-**Priority**: MEDIUM  
-**Effort**: 2-3 days
-
-- LRU cache for frequent IP lookups (10k entries)
-- Binary search optimization for CIDR matching
-- Parallel lookup support
-- Lazy loading of GeoIP database
-- Memory-mapped file support for large databases
-
-**Affected Module**: `waf/geo/geo.go`
-
-## Protocol Support
-
-### GraphQL Query Depth Limiting
-**Priority**: MEDIUM  
-**Effort**: 4-5 days
-
-- Parse GraphQL queries from request body
-- Calculate query depth and complexity
-- Configurable max depth (default: 10)
-- Block excessively nested queries
-- Metrics for GraphQL-specific attacks
-
-**New Module**: `waf/graphql/validator.go`
-
-### WebSocket Security
-**Priority**: MEDIUM-HIGH  
-**Effort**: 5-6 days
-
-- WebSocket connection hijacking detection
-- Payload size limits per message
-- Rate limiting for WebSocket frames
-- Protocol-specific fingerprinting
-- Message inspection for attack patterns
-
-**New Module**: `waf/websocket/security.go`
-
-### gRPC Proxy Support
-**Priority**: LOW-MEDIUM  
-**Effort**: 6-8 days
-
-- HTTP/2 gRPC traffic detection
-- Method-level rate limiting
-- Health check integration
-- Metadata inspection
-- Error handling and retries
-
-**New Module**: `waf/grpc/proxy.go`
-
-## Observability
-
-### Custom Prometheus Labels
-**Priority**: MEDIUM  
-**Effort**: 2-3 days
-
-- Dynamic label registration via config
-- Custom collectors for business metrics
-- Label cardinality limits (prevent explosion)
-- Metric aggregation helpers
-
-**Affected Module**: `waf/metrics/metrics.go`
-
-**Configuration**:
-```json
-{
-  "metrics": {
-    "custom_labels": ["datacenter", "environment", "service"],
-    "max_label_values": 1000
-  }
-}
-```
-
-### Distributed Tracing
-**Priority**: LOW-MEDIUM  
-**Effort**: 4-5 days
-
-- OpenTelemetry integration
-- Trace context propagation
-- Span creation for each middleware
-- Sampling configuration
-- Export to Jaeger/Zipkin
-
-**New Package**: `rhinowaf/tracing`
-
 ### Structured Logging
-**Priority**: HIGH  
-**Effort**: 3-4 days
-
-- Replace fmt.Printf with structured logger (zerolog/zap)
-- Log levels (DEBUG, INFO, WARN, ERROR)
-- JSON output format
-- Context propagation in logs
-- Correlation IDs for request tracing
-
-**Affected Module**: All logging throughout codebase
-
-## Quality of Life
-
-### Hot-Reload for TLS Certificates
-**Priority**: MEDIUM  
+**Priority**: CRITICAL  
 **Effort**: 2-3 days
 
-- Watch certificate files for changes
-- Automatic reload without downtime
-- Validation before applying new certs
-- Rollback on invalid certificates
-- Metrics for cert reload success/failure
+Current log.Printf makes production debugging impossible. Need structured logs with levels.
 
-**Affected Modules**: 
-- `cmd/rhinowaf/main.go`
-- `waf/http3/http3.go`
+**Implementation**:
+- Replace all log.Printf with structured logger
+- Log levels: ERROR, WARN, INFO, DEBUG
+- JSON output for log aggregation
+- Request ID correlation
 
-### Configuration Validation Tool
-**Priority**: LOW-MEDIUM  
-**Effort**: 2-3 days
+**Library**: Use stdlib `log/slog` (no external deps)
 
-- Standalone CLI tool for config validation
-- JSON schema validation
-- Dependency checking (e.g., OAuth2 requires certs)
-- Warnings for suboptimal configs
-- Example generation
-
-**New Binary**: `rhinowaf-validate`
-
-### Graceful Degradation
-**Priority**: MEDIUM  
-**Effort**: 3-4 days
-
-- Continue operation if non-critical features fail
-- Fallback to passthrough mode on panic
-- Circuit breaker for external services (reputation, GeoIP)
-- Degraded mode indicators in metrics
-- Automatic recovery attempts
-
-## Breaking Changes
-
-None planned. v2.5 will be fully backward compatible with v2.4.x configurations.
-
-## Migration Guide
-
-No migration required from v2.4.x. New features are opt-in via configuration.
+**Affected**: All modules using log.Printf
 
 ## Performance Impact
 
-- Response caching: 50-80% reduction in backend load for cacheable content
-- GeoIP optimization: 10-20% improvement in request latency
-- Structured logging: 5-10% overhead (configurable log level mitigates)
-- IPv6 support: Negligible impact (<1%)
+- Response caching: 60-80% reduction in backend load
+- Token bucket: Better burst handling, same throughput
+- Structured logging: <2% overhead at INFO level
+- IPv6: Already completed, <1% overhead
 
-## Testing Strategy
+## Testing
 
-1. Unit tests for all new modules
-2. Integration tests with real backends
-3. Load testing with k6 (100k req/s target)
-4. IPv6 network testing
-5. WebSocket client testing (autobahn-testsuite)
-6. gRPC testing with grpcurl
-7. Cache invalidation correctness tests
-8. Circuit breaker failure scenarios
-
-## Dependencies
-
-New dependencies to add:
-- OpenTelemetry SDK (tracing)
-- zerolog or zap (structured logging)
-- grpc-go (gRPC support)
-- gorilla/websocket (WebSocket handling)
+- Unit tests for each feature
+- Load testing with realistic traffic patterns
+- Cache hit ratio validation
+- Rate limiter burst handling tests
 
 ## Timeline
 
-**Month 1**: Security enhancements (IPv6, templates, rate limiting)  
-**Month 2**: Performance work (caching, pooling, GeoIP)  
-**Month 3**: Protocol support (GraphQL, WebSocket, gRPC)  
-**Month 4**: Observability (tracing, logging, metrics)  
-**Month 5**: QoL improvements and testing  
-**Month 6**: Beta release and documentation
+**Week 1-2**: Advanced rate limiting + tests  
+**Week 3-4**: Response caching + tests  
+**Week 5**: Structured logging migration  
+**Week 6**: Integration testing + documentation
 
-## Success Metrics
+## Breaking Changes
 
-- 50% reduction in memory usage for session storage
-- 30% improvement in request throughput
-- Support for 100k concurrent WebSocket connections
-- 99.99% uptime with graceful degradation
-- Zero breaking changes for existing users
+None. All features are opt-in or backward compatible.
+
+## Deferred to v2.6+
+
+- Custom error templates (nice-to-have)
+- Connection pooling improvements (optimization)
+- GeoIP optimization (not critical)
+- GraphQL support (niche use case)
+- WebSocket security (separate focus area)
+- gRPC proxy (separate focus area)
+- Distributed tracing (complex, not critical)
+- Custom Prometheus labels (nice-to-have)
+- TLS cert hot-reload (workaround exists)
+- Config validation tool (nice-to-have)
+- Graceful degradation (complex, needs design)
 
 ## Version History
 
