Update README and roadmap for v2.5 IPv6 release
- Bump version to 2.5.0, set status to "IPv6 Support Added" and update last-updated date
- Include IPv6 in features list and add IPV6_SUPPORT doc link
- Add V2.5 release notes entry and reorder changelog links
- Simplify V2.5 roadmap to focus on rate limiting, response caching, and structured logging; adjust version history

--- a/docs/roadmap/V2.5_ROADMAP.md
+++ b/docs/roadmap/V2.5_ROADMAP.md
@@ -6,24 +6,9 @@
 
 ## Overview
 
-v2.5 addresses critical production needs: IPv6 support, better rate limiting, response caching, and proper logging. Everything else is deferred to v2.6+.
+v2.5 focuses on critical production needs: advanced rate limiting, response caching, and structured logging.
 
 ## Critical Features
-
-### IPv6 Full Support ✓
-**Priority**: CRITICAL  
-**Status**: COMPLETED
-
-- Dual-stack IP handling (IPv4 + IPv6)
-- IPv6 CIDR matching for GeoIP lookups
-- Rate limiting keys for IPv6 addresses
-- IP validation updates across all modules
-- Blocked/allowed IP lists with IPv6 support
-
-**Completed Modules**:
-- `waf/security/ip.go`
-- `waf/geo/geo.go`
-- Comprehensive test coverage
 
 ### Advanced Rate Limiting
 **Priority**: CRITICAL  
@@ -98,7 +83,6 @@ Current log.Printf makes production debugging impossible. Need structured logs w
 - Response caching: 60-80% reduction in backend load
 - Token bucket: Better burst handling, same throughput
 - Structured logging: <2% overhead at INFO level
-- IPv6: Already completed, <1% overhead
 
 ## Testing
 
@@ -134,8 +118,9 @@ None. All features are opt-in or backward compatible.
 
 ## Version History
 
-- **v2.4.1** (Oct 2025): OAuth2 + HTTP/3
+- **v2.5.0** (Nov 2025): IPv6 support
+- **v2.4.2** (Nov 2025): CSRF protection
+- **v2.4.1** (Oct 2025): OAuth2 + HTTP/3 + Request ID tracking
 - **v2.4.0** (Oct 2025): HTTP smuggling detection
-- **v2.3.2** (Sep 2025): Health checks + JWT rate limiting
-- **v2.3.1** (Aug 2025): Log rotation + webhooks
-- **v2.3.0** (Jul 2025): Challenge system
+- **v2.3** (Oct 2025): Prometheus metrics + hot-reload
+- **v2.2** (Oct 2025): Security hardening
